--- a/aura-components/src/main/components/ui/autocomplete/autocomplete.cmp
+++ b/aura-components/src/main/components/ui/autocomplete/autocomplete.cmp
@@ -32,6 +32,7 @@
     <aura:attribute name="header" type="Aura.Component[]" description="A facet above the rendered list, for use as a list header"/>
     <aura:attribute name="footer" type="Aura.Component[]" description="A facet below the rendered list, for use as a list footer"/>
     <aura:attribute name="usePanel" type="boolean" default="false"/>
+    <aura:attribute name="setDefaultHighlight" type="boolean" default="false" description="Indicate if the first option item should be highlighted by default."/>
     
     <aura:registerEvent name="matchDone" type="ui:matchDone" description="The event fired when the matching is done."/>
     <aura:registerEvent name="inputChange" type="ui:inputChange" description="The event fired when the input value changes."/>
@@ -87,7 +88,8 @@
         matchDone="{!c.handleMatchDone}"
         selectListOption="{!c.handleSelectOption}"
         updateAriaAttributes="{!c.updateAriaAttributes}"
-        matchFunc="{!v.matchFunc}"/>
+        matchFunc="{!v.matchFunc}"
+        setDefaultHighlight="{!v.setDefaultHighlight}"/>
         </ui:autocompletePanel>
         <aura:set attribute="else">
             <ui:autocompleteList aura:id="list" class="{!v.class + ' lookup__menu'}"
@@ -105,7 +107,8 @@
         matchDone="{!c.handleMatchDone}"
         selectListOption="{!c.handleSelectOption}"
         updateAriaAttributes="{!c.updateAriaAttributes}"
-        matchFunc="{!v.matchFunc}"/>
+        matchFunc="{!v.matchFunc}"
+        setDefaultHighlight="{!v.setDefaultHighlight}"/>
     </aura:set>
     </aura:if>
     
