--- a/aura-components/src/main/components/ui/autocompleteList/autocompleteList.cmp
+++ b/aura-components/src/main/components/ui/autocompleteList/autocompleteList.cmp
@@ -25,6 +25,7 @@
     <aura:attribute name="propertyToMatch" type="String" default="label" description="The property name in the data object which is used to match typing in the input field."/>
     <aura:attribute name="theme" type="String" default="default" description="Theme to apply to this component."/>
     <aura:attribute name="matchFunc" type="Aura.Action" description="Overrides default list item update behavior to allow custom text matching."/>
+    <aura:attribute name="setDefaultHighlight" type="boolean" default="false" description="Indicate if the first option item should be highlighted by default."/>
 
     <aura:registerEvent name="matchDone" type="ui:matchDone" description="The event fired when the matching is done."/>
     <aura:registerEvent name="listHighlight" type="ui:listHighlight" description="The event fired when a list option is highlighted."/>
