--- a/aura-components/src/test/components/uitest/autoComplete_Test/autoComplete_Test.cmp
+++ b/aura-components/src/test/components/uitest/autoComplete_Test/autoComplete_Test.cmp
@@ -183,6 +183,24 @@
     </ui:autocomplete>
     Match Count: <ui:outputText aura:id="autoCompleteToggleMatchSize" value=""/> <br/><br/>
     <br/><br/>
+	
+	<div>Autocomplete with default highlight</div><br/>
+	<ui:autocomplete usePanel="{!v.usePanel}" aura:id="autoCompleteHighlight" optionVar="row"
+		setDefaultHighlight="{!true}" 
+        matchDone="{!c.handleInputChangeHighlightMatchDone}"
+        inputChange="{!c.handleInputChangeHighlight}" 
+        selectListOption="{!c.handleSelectOptionHighlight}">
+        <aura:set attribute="dataProvider">
+            <uitest:autocomplete_TestDataProvider/>
+        </aura:set>
+        <aura:set attribute="listOption">
+            <ui:autocompleteOption label="{!row.label}" keyword="{!row.keyword}" value="{!row.value}" visible="{!row.visible}"/>
+        </aura:set>
+    </ui:autocomplete>
+    Match Count: <ui:outputText aura:id="autoCompleteHighlightMatchSize" value=""/> <br/><br/>
+    <br/><br/>
+    
+    
     </div>
     <div class="manager">
 		<ui:panelManager2 aura:id="pm">
@@ -192,4 +210,5 @@
 	        </aura:set>
 	    </ui:panelManager2>
 	</div>
+	
 </aura:component>
