--- a/aura-components/src/test/components/performanceTest/virtualDataGridTestSwapColumns/virtualDataGridTestSwapColumns.cmp
+++ b/aura-components/src/test/components/performanceTest/virtualDataGridTestSwapColumns/virtualDataGridTestSwapColumns.cmp
@@ -1,8 +1,8 @@
 <!--randomly swaps all of ui:virtualDataGrid's columns, uses virtualDataGridTestAppendRows's model-->
 
-<aura:component extends="performance:perfTest">
+<aura:component extends="performance:perfTest" model="js://performanceTest.virtualDataGridTestAppendRows">
     <aura:attribute name="data" type="List"/>
-    <ui:virtualDataGrid aura:id="myGrid" items="{!v.data}">
+    <ui:virtualDataGrid aura:id="myGrid" items="{!m.data}" >
     
         <aura:set attribute="headerColumns">       
         	<ui:dataGridColumn label="First Name" name="firstName" />
