--- a/aura-components/src/test/components/performanceTest/virtualDataGridTestReloadData/virtualDataGridTestReloadData.cmp
+++ b/aura-components/src/test/components/performanceTest/virtualDataGridTestReloadData/virtualDataGridTestReloadData.cmp
@@ -1,8 +1,8 @@
 <!-- tests reloading row data used by ui:virtualDataGrid, uses virtualDataGridTestAppendRows's model-->
 
-<aura:component extends="performance:perfTest">
+<aura:component extends="performance:perfTest" model="js://performanceTest.virtualDataGridTestAppendRows">
     <aura:attribute name="data" type="List"/>
-    <ui:virtualDataGrid aura:id="myData" items="{!v.data}">
+    <ui:virtualDataGrid aura:id="myData" items="{!m.data}">
     
         <aura:set attribute="headerColumns">
         
