rename conflict model and modelfactory classes

--- a/aura-components/src/main/components/auradocs/topics/topics.cmp
+++ b/aura-components/src/main/components/auradocs/topics/topics.cmp
@@ -15,7 +15,7 @@
     limitations under the License.
 
 -->
-<aura:component model="java://org.auraframework.docs.TopicsModel">
+<aura:component model="java://org.auraframework.docs.DocsTopicsModel">
         <aura:iteration items="{!m.components}" var="namespace">
             {!namespace.title}<br/>
             <ul>
