--- a/aura-components/src/main/components/auradocs/demoMenuMeta/demoMenuMeta.cmp
+++ b/aura-components/src/main/components/auradocs/demoMenuMeta/demoMenuMeta.cmp
@@ -15,7 +15,7 @@
     limitations under the License.
 
 -->
-<aura:component model="java://org.auraframework.docs.MenuTestModel" access="global">
+<aura:component model="java://org.auraframework.docs.DocsMenuTestModel" access="global">
 <div style="margin:20px;">
     <div style="display:inline-block;width:50%;vertical-align:top;">
         <h2>Metadata driven menu</h2>
